--- a/build.yaml
+++ b/build.yaml
@@ -1,9 +1,13 @@
 include:
-  - board: bmp_boost
+  - board: nice_nano_v2
     shield: 7skb_left
-    snippet: studio-rpc-usb-uart
+    # snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  - board: bmp_boost
+  - board: nice_nano_v2
     shield: 7skb_right
-    snippet: studio-rpc-usb-uart
+    # snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: nice_nano_v2
+    shield: sofle_left
+  - board: nice_nano_v2
+    shield: sofle_right
