--- a/build.yaml
+++ b/build.yaml
@@ -8,6 +8,8 @@ include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   # - board: nice_nano
+  #   shield: settings_reset
+  # - board: nice_nano
   #   shield: sofle_left
   # - board: nice_nano
   #   shield: sofle_right
