--- a/boards/shields/7skb/7skb.dtsi
+++ b/boards/shields/7skb/7skb.dtsi
@@ -46,7 +46,10 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)       RC(3,6)  RC(3,7)  RC(3,8) 
         ;
     };
 
-
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&kscan0>;
+    };
 };
 
 &physical_layout0 {
