--- a/boards/shields/7skb/7skb_left.conf
+++ b/boards/shields/7skb/7skb_left.conf
@@ -4,3 +4,5 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_BT_BAS=n
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_PM_SOFT_OFF=y
