--- a/build.yaml
+++ b/build.yaml
@@ -1,15 +1,16 @@
 include:
-  - board: nice_nano
+  - board: nice_nano@2.0.0/nrf52840/zmk
     shield: 7skb_left
+    artifact-name: 7skb_left-nice_nano_v2
     snippet: studio-rpc-usb-uart
+    extra_west_args: --pristine
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  - board: nice_nano
+  - board: nice_nano@2.0.0/nrf52840/zmk
     shield: 7skb_right
+    artifact-name: 7skb_right-nice_nano_v2
     snippet: studio-rpc-usb-uart
+    extra_west_args: --pristine
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  # - board: nice_nano
+  # - board: nice_nano@1.0.0/nrf52840/zmk  # v1用
   #   shield: settings_reset
-  # - board: nice_nano
-  #   shield: sofle_left
-  # - board: nice_nano
-  #   shield: sofle_right
+  #   extra_west_args: --pristine
